# TDMA

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  main.cpp  tdma_1d.cpp  tdma_2d.cpp  tdma_2d_mpi.cpp
include/: Matrix.h
src/: imgui_impl_opengl3.cpp  imgui_impl_sdl2.cpp
